--- a/challenge one.css
+++ b/challenge one.css
@@ -1,7 +1,35 @@
-#navbar{
-    position: fixed;
-    width: 30%; top: 0px; left: 0px; height: 100%; border-right: solid
-    }
-#main-doc{
-    width: 80%; top: 0px;
+html, body {
+    min-width: 290px;
+    color: #4d4e53;
+    background-color: #ffffff;
+    font-family: 'Open Sans',Arial,sans-serif;
+    line-height: 1.5;
 }
+html, body {
+    color: #4d4e53;
+    font-family: 'Open Sans',Arial,sans-serif;
+    line-height: 1.5;
+}
+body{
+    min-width: 290px;
+     color:black;
+     background-color: #ffffff;
+     font-family: 'Open sans' ,Arial, Helvetica, sans-serif;
+     line-height: 1.5;
+}
+#navbar{
+    
+        position: fixed;
+        min-width: 290px;
+        top: 0px;
+        left: 0px;
+        width: 300px;
+        height: 100%;
+        border-right: solid;
+        border-color: rgba(0,22,22,0.4);
+}
+
+
+
+
+
